--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mantine/hooks": "^5.3.0",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
