--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^7.11.1",
     "@mantine/hooks": "^7.11.1",
-    "next": "12.3.0",
+    "@tabler/icons-react": "^3.30.0",
+    "next": "^15.1.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.55.0"
