--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint && prettier . --check",
     "export": "next export"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
+    "prettier": "3.5.2",
     "typescript": "4.8.3"
   }
 }
