--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@tabler/icons-react": "^3.30.0",
     "next": "^15.1.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.55.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
